package final_test_practice.observer.CA2;

public interface ButtonListener {
    void onClick();
}
